fix button alignment

--- a/client/app/assets/styles/navbar.scss
+++ b/client/app/assets/styles/navbar.scss
@@ -22,7 +22,7 @@
     &:hover {
       background-color: white;
     }
-    &:active, &.active {
+    &.active {
       a {
         margin-top: -3px;
         font-weight: 600;
